issue #1940 - Remove footer on mobile, and issue #1941 - Add space at the bottom of the project feed so the new project post doesn't overlap with the "Write a comment" link

--- a/src/projects/detail/Dashboard.scss
+++ b/src/projects/detail/Dashboard.scss
@@ -34,7 +34,8 @@
     @media screen and (max-width: $screen-md - 1px) {
       flex-direction: column;
       margin-bottom: 0;
-      padding: 0;
+      /* leave space for new message flying button and space around it */
+      padding: 0 0 (56px + 8 * $base-unit) 0;
     }
 
     .left-area {
@@ -53,7 +54,7 @@
         padding-bottom: 2 * $base-unit;
 
         @media screen and (max-width: $screen-md - 1px) {
-          padding-bottom: 4 * $base-unit;
+          padding-bottom: 0;
         }
 
         .form-group {
@@ -130,6 +131,10 @@
         &.expanded.modal {
           background-color: $tc-gray-neutral-light;
         }
+      }
+
+      .feed-action-card:first-child {
+        margin-top: 4 * $base-unit;
       }
 
       .feed-action-card + .feed-action-card {
